# tt

./: README.md
tc1/: tc1.cabal
tc1/app/: CLI.hs  Main.hs  Parser.hs  Syntax.hs  Type.hs  Typechk.hs
