cabal-version:      2.4
name:               tc1
version:            0.1.0.0
author:             dmarcia
maintainer:         marcia@disroot.org

executable tc1
    main-is:          Main.hs
    other-modules:    Parser
                    , Syntax
                    , Type
                    , CLI
                    , Typechk
    build-depends:    base
                    , megaparsec 
                    , containers
                    , mtl
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: UnicodeSyntax
                      , LambdaCase
                      , TupleSections